[feat + improvement] Implement API Copy Deck + Refactor utils
