# internal/entity/deck.go
@@ -3,6 +3,7 @@ package entity
 import (
 	"go.mongodb.org/mongo-driver/bson/primitive"
 	"time"
+	time2 "vietime-backend/pkg/utils/time"
 )
 
 type Deck struct {
@@ -26,6 +27,22 @@ type Deck struct {
 	CurReviewCards      int                `json:"cur_review_cards" bson:"cur_review_cards"`
 }
 
+type DeckWithReviewCards struct {
+	Deck          `bson:"inline"`
+	Cards         *[]Card `json:"cards" bson:"cards"`
+	NumBlueCards  int     `json:"num_blue_cards" bson:"num_blue_cards"`
+	NumRedCards   int     `json:"num_red_cards" bson:"num_red_cards"`
+	NumGreenCards int     `json:"num_green_cards" bson:"num_green_cards"`
+}
+
+type DeckWithCards struct {
+	Deck          `bson:"inline"`
+	Cards         *[]Card `json:"cards" bson:"cards"`
+	NumBlueCards  int     `json:"num_blue_cards" bson:"num_blue_cards"`
+	NumRedCards   int     `json:"num_red_cards" bson:"num_red_cards"`
+	NumGreenCards int     `json:"num_green_cards" bson:"num_green_cards"`
+}
+
 func (deck *Deck) SetDefault() *Deck {
 	deck.CreatedAt = time.Now()
 	deck.MaxNewCards = 20
@@ -34,5 +51,17 @@ func (deck *Deck) SetDefault() *Deck {
 	deck.Views = 1
 	deck.TotalLearnedCards = 0
 	deck.IsFavorite = false
+	return deck
+}
+
+func (deck *Deck) UpdateReview() *Deck {
+	// Update the LastReview field to the current day
+	cur := time2.TruncateToDay(time.Now())
+	if cur.Equal(deck.LastReview) {
+		return deck
+	}
+	deck.LastReview = cur
+	deck.CurNewCards = 0
+	deck.CurReviewCards = 0
 	return deck
 }
